--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -169,14 +169,16 @@ a:focus, a:hover {
   -webkit-transition: background 0.3s ease-in-out;
   -moz-transition: background 0.3s ease-in-out;
   transition: background 0.3s ease-in-out;
-  color: white;
-  border: 2px solid white;
+  color: black;
+  border: 2px solid black;
   border-radius: 100% !important;
   background: transparent;
+  text-shadow: none;
+
 }
 
 .btn-circle:focus, .btn-circle:hover {
-  color: white;
+  color: black;
   outline: none;
   background: rgba(255, 255, 255, 0.1);
 }
