--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -123,9 +123,8 @@ a:focus, a:hover {
   height: auto;
   padding: 200px 0;
   text-align: center;
-  text-shadow: 6px 2px 2px #000000; FF3.5+, Opera 9+, Saf1+, Chrome, IE10 */
   color: white;
-  background: url("../img/crab_nebula.jpeg") no-repeat bottom center scroll;
+  background: url("../img/solar_eclipse.jpg") no-repeat center center scroll;
   background-color: black;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -144,7 +143,6 @@ a:focus, a:hover {
 
 .masthead .intro-body .intro-text {
   font-size: 18px;
-  text-shadow: 2px 2px 2px #000000; FF3.5+, Opera 9+, Saf1+, Chrome, IE10 */
 }
 
 @media (min-width: 768px) {
@@ -153,7 +151,7 @@ a:focus, a:hover {
     padding: 0;
   }
   .masthead .intro-body .brand-heading {
-    font-size: 100px;
+    font-size: 80px; /*used to be 100px*/
   }
   .masthead .intro-body .intro-text {
     font-size: 22px;
@@ -169,8 +167,8 @@ a:focus, a:hover {
   -webkit-transition: background 0.3s ease-in-out;
   -moz-transition: background 0.3s ease-in-out;
   transition: background 0.3s ease-in-out;
-  color: black;
-  border: 2px solid black;
+  color: white;
+  border: 2px solid white;
   border-radius: 100% !important;
   background: transparent;
   text-shadow: none;
@@ -178,7 +176,7 @@ a:focus, a:hover {
 }
 
 .btn-circle:focus, .btn-circle:hover {
-  color: black;
+  color: white;
   outline: none;
   background: rgba(255, 255, 255, 0.1);
 }
